tests/type-reconstruction/ill-typed/exceptions/exceptions-5.stella
language core;

extend with #panic, #type-reconstruction;

fn main(a : Bool) -> auto {
  return panic!(Nat::iszero(a))
}